use slightly more modern String API